# paralel

./: main.cpp
lab1/: CMakeLists.txt  Makefile  REDME.md
task2/2.1/: Makefile  task1.cpp
task2/2.2/: Makefile  task2.cpp
task2/2.3/: Makefile  task3.cpp
task3/3.1/: main.cpp
task3/3.2/: Makefile  main.cpp
task4/: server.py
task5/: task5.py
task6/gpu/: Makefile  jacobi.cpp  laplace2d.cpp  laplace2d.hpp
task6/parallel/: Makefile  jacobi.cpp  laplace2d.cpp
task6/sequential/: Makefile  jacobi.cpp  laplace2d.cpp
task7/: Makefile  jacobi.cpp  laplace2d.cpp  laplace2d.hpp
task8/: CMakeLists.txt  main.cu
